# physical-ai-textbook-vercel-backend

./: .gitignore  Dockerfile  agent.py  debug_gemini.py  gemini_config.py  ingest.py  list_models.py  main.py  pyproject.toml  requirements.txt  test_chat.py  tools.py  vercel.json
